--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
 .App {
-  text-align: center;
+  border: 1px solid #3d3d3d;
+  margin: 50px 30px;
+  padding: 25px 15px;
+  border-radius: 10px;
+  background-color: #FFFAF1;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.todo-container {
   display: flex;
   flex-direction: column;
+}
+
+.item {
+  background-color: #F4F0DB;
+  border-radius: 5px;
+  padding: 5px;
+  margin: 5px 0;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.todo-container ul {
+  padding: 10px;
+}
+
+.todo-container li {
+  overflow-wrap: break-word;
+  padding: 10px;
+  list-style-type: "👉";
+  cursor: pointer;
+
+}
+
+.done {
+  text-decoration: line-through;
+  color: #A9A9A9;
+}
+
+.delete {
+  cursor: pointer;
+}
+
+.todo-container input {
+  padding: 10px;
+  margin: 10px 0;
+  border-radius: 5px;
+  border: 1px solid #DEC19B;
+}
+
+.todo-container button {
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  background-color: #DEC19B;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  cursor: pointer;
 }
